# Automated-DataCleaner

./: README.md  example.py  pyproject.toml
src/data_cleaner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data_cleaner_aditi.egg-info/: PKG-INFO  SOURCES.txt
src/datacleaner_aditi/: __init__.py  core.py
src/datacleaner_aditi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
