[build-system]
requires = ["setuptools>=71", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacleaner-aditi"
version = "0.1.0"
description = "Simple automated data cleaning utilities for pandas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas", "scikit-learn"]
license = { text = "MIT" }

[tool.setuptools]
license-files = []
